--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=prakash4659
-keyPassword=prakash4659
+storePassword=******
+keyPassword=******
 keyAlias=key
 storeFile=../../../../key.jks
